--- a/views/pages/fitness/new.ejs
+++ b/views/pages/fitness/new.ejs
@@ -20,21 +20,18 @@
             <!-- <br> -->
     <!-- Select one of Machine Please -->
     <br>
-    <input type="radio" name="muscle" class="radio-input" value="bench" required>
-    <label for="">bench</label>       
-    <br>
-    <input type="radio" name="muscle"  class="radio-input" value="dumbbell" required>
-    <label for="">dumbbells</label>   
-    <br>
-    <input type="radio" name="muscle"class="radio-input" value="smith" required>
-    <label for="">smith machine</label>    
-    <br>
-    <input type="radio" name="muscle" class="radio-input" value="barbell" required>
-    <label for="">barbell</label>   
-    <br>
-    <input type="radio" name="muscle" class="radio-input" value="pull" required>
-    <label for="">pull machines</label>  
-    <br>
+    bench<input type="radio" name="muscle" class="radio-input" value="bench" required>
+    <!-- <label for="" class="machine-input">bench</label>        -->
+ 
+    dumbbells <input type="radio" name="muscle"  class="radio-input" value="dumbbell" required>
+    <!-- <label for="" class="machine-input">dumbbells</label>    -->
+
+    smith machine<input type="radio" name="muscle"class="radio-input" value="smith" required>
+    <!-- <label for="" class="machine-input">smith machine</label>     -->
+    barbell <input type="radio" name="muscle" class="radio-input" value="barbell" required>
+    <!-- <label for="" class="machine-input">barbell</label>    -->
+    pull machines<input type="radio" name="muscle" class="radio-input" value="pull" required>
+    <!-- <label for="" class="machine-input">pull machines</label>   -->
     <button type="submit" class="button"> Submit </button>
 </fieldset>
     </form>
