--- a/views/pages/fitness/show.ejs
+++ b/views/pages/fitness/show.ejs
@@ -23,7 +23,7 @@
                 <li> Category:  </li>
                 <input type="text" name="catagory" value="<%= val.data.category %>">
                 <br>
-                <img class="machine-pic" src="<%= val.data.image ? val.data.image: 'https://d3nuqriibqh3vw.cloudfront.net/media-vimeo/70533052.jpg' %>" width="60%"  height="60%" alt="<%= val.data.name %> image" >
+                <img class="machine-pic" src="<%= val.data.image ? val.data.image: 'https://www.gymequip.eu/wp-content/uploads/2015/10/Cable-Crossover-Machine-C2X-1.png' %>" width="60%"  height="60%" alt="<%= val.data.name %> image" >
                 <!-- <input type="text" name="url" value="<%= val.data.image %>"> -->
             </ul>
             <button type="submit"  class="button">Add to my Exercises</button>
