--- a/public/styles/form.css
+++ b/public/styles/form.css
@@ -78,7 +78,7 @@ grid-template-columns: 50% 50%; */
    font-size: 17px;
     padding: 5%;
 }
-input , select{
+.food-input{
     border: 0;
     border-bottom: 1px solid #313131;
     width: 88%;
@@ -107,46 +107,56 @@ label{
     width: 20%;
     margin-top: -10px;
 }
-#results{
-    padding: 3%;
-    margin: 5%;
- color: white;
-    box-shadow: 0px 0px 80px 0px rgba(0,0,0,.1);
-    border: transparent;
-    font-family: 'Roboto', sans-serif;
-    color: #FFFFFF;
-    background: rgb(197, 24, 24);
-    border-color: rgb(197, 24, 24);
-    border-radius: 30px;
-    font-size: 18px;
-    width: 80%;
-    /* transition: 200ms; */
-    margin-top: 20%;
-    text-decoration: none;
+#results {
+        padding: 3%;
+        margin: 5%;
+        color: white;
+        box-shadow: 0px 0px 80px 0px rgba(0,0,0,.1);
+        border: transparent;
+        font-family: 'Roboto', sans-serif;
+        color: #FFFFFF;
+        background: rgb(34, 34, 37);
+        border-color: rgb(197, 24, 24);
+        /* border-radius: 30px; */
+        font-size: 18px;
+        width: 80%;
+        /* transition: 200ms; */
+        /* margin-top: 20%; */
+        text-decoration: none;
+        height: 28%;
 }
  /* ========================= exercise form ============================================== */
 .exercise-form{
     padding: 3%;
-    margin: 3%;
+    margin: auto;
     color: white;
  /* text-align: center; */
     background-color: #222225;
     box-shadow: 0px 0px 80px 0px rgba(0,0,0,.1);
     border: transparent;
-    width: 80%;
-    margin-left: 7%;
+    width: 50%;
+    /* margin-left: 7%; */
+    margin-top: 5%;
 }
 .radio-input{
-    border:rgb(197, 24, 24) solid ;
+    /* border:rgb(197, 24, 24) solid ;
     width: 35%;
     padding: 1%;
-    margin: 0%;
+    margin: 0%; */
+    box-shadow: none;
 }
 .exercise-header{
     text-align: center;
 }
 .exercise-button{
     margin-top: 10%; 
+}
+.machine-input{
+    width: auto;
+    font-size: 18px;
+    padding:  0;
+    margin-left: 0%;
+    /* display: none;  */
 }
 .button {
     background-color: rgb(197, 24, 24);
@@ -199,3 +209,8 @@ label{
   .herader-form{
       text-align: center;
   }
+  a {
+    text-decoration: none;
+    color: white;
+    background: black;
+}
